--- a/app-vite-v2/package.json
+++ b/app-vite-v2/package.json
@@ -4,7 +4,7 @@
   "description": "A Quasar CLI with Vite starter project.",
   "type": "module",
   "private": true,
-  "packageManager": "pnpm@9.12.1",
+  "packageManager": "yarn@1.22.19",
   "scripts": {
     "lint": "eslint --ext .js,.vue ./",
     "format": "prettier --write \"**/*.{js,vue,scss,html,md,json}\" --ignore-path .gitignore",
@@ -30,5 +30,8 @@
   },
   "engines": {
     "node": "^24 || ^22 || ^20 || ^18"
+  },
+  "resolutions": {
+    "sass-embedded": "npm:sass@1.80.1"
   }
 }
