--- a/app-webpack-v4/package.json
+++ b/app-webpack-v4/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "A Quasar CLI with Webpack starter project.",
   "private": true,
-  "packageManager": "pnpm@9.12.1",
+  "packageManager": "yarn@1.22.19",
   "scripts": {
     "lint": "eslint --ext .js,.vue ./",
     "format": "prettier --write \"**/*.{js,vue,scss,html,md,json}\" --ignore-path .gitignore",
@@ -40,5 +40,8 @@
   ],
   "engines": {
     "node": "^24 || ^22 || ^20 || ^18"
+  },
+  "resolutions": {
+    "sass-embedded": "npm:sass@1.80.1"
   }
 }
