--- a/app-vite-v2/package.json
+++ b/app-vite-v2/package.json
@@ -4,7 +4,7 @@
   "description": "A Quasar CLI with Vite starter project.",
   "type": "module",
   "private": true,
-  "packageManager": "yarn@1.22.19",
+  "packageManager": "pnpm@8.15.6",
   "scripts": {
     "lint": "eslint --ext .js,.vue ./",
     "format": "prettier --write \"**/*.{js,vue,scss,html,md,json}\" --ignore-path .gitignore",
@@ -13,20 +13,20 @@
     "build": "quasar build"
   },
   "dependencies": {
-    "@quasar/extras": "^1.16.12",
-    "quasar": "^2.17.0",
-    "vue": "^3.5.12",
+    "@quasar/extras": "^1.16.13",
+    "quasar": "^2.17.4",
+    "vue": "^3.5.13",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "vite-plugin-checker": "^0.8.0",
-    "eslint": "^8.57.0",
-    "eslint-plugin-vue": "^9.29.0",
+    "eslint": "^8.57.1",
+    "eslint-plugin-vue": "^9.31.0",
     "eslint-config-prettier": "^9.1.0",
     "prettier": "^3.3.3",
-    "@quasar/app-vite": "^2.0.0-beta.22",
+    "@quasar/app-vite": "^2.0.0-rc.2",
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.47"
+    "postcss": "^8.4.49"
   },
   "engines": {
     "node": "^24 || ^22 || ^20 || ^18"
