--- a/app-vite-v2/.prettierrc.json
+++ b/app-vite-v2/.prettierrc.json
@@ -1,3 +1,6 @@
 {
-  "singleQuote": true
+  "$schema": "https://json.schemastore.org/prettierrc",
+  "semi": false,
+  "singleQuote": true,
+  "printWidth": 100
 }
