--- a/app-vite-v2/package.json
+++ b/app-vite-v2/package.json
@@ -4,10 +4,10 @@
   "description": "A Quasar CLI with Vite starter project.",
   "type": "module",
   "private": true,
-  "packageManager": "pnpm@8.15.6",
+  "packageManager": "pnpm@9.6.0",
   "scripts": {
-    "lint": "eslint --ext .js,.vue ./",
-    "format": "prettier --write \"**/*.{js,vue,scss,html,md,json}\" --ignore-path .gitignore",
+    "lint": "eslint -c ./eslint.config.js \"./src*/**/*.{js,cjs,mjs,vue}\"",
+    "format": "prettier --write \"**/*.{js,vue,html,md,json}\" --ignore-path .gitignore",
     "test": "echo \"No test specified\" && exit 0",
     "dev": "quasar dev",
     "build": "quasar build"
@@ -19,12 +19,14 @@
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
+    "@quasar/app-vite": "^2.0.1",
+    "@eslint/js": "^9.14.0",
+    "eslint": "^9.14.0",
+    "eslint-plugin-vue": "^9.30.0",
+    "globals": "^15.12.0",
     "vite-plugin-checker": "^0.8.0",
-    "eslint": "^8.57.1",
-    "eslint-plugin-vue": "^9.31.0",
-    "eslint-config-prettier": "^9.1.0",
+    "@vue/eslint-config-prettier": "^10.1.0",
     "prettier": "^3.3.3",
-    "@quasar/app-vite": "^2.0.0-rc.2",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49"
   },
