--- a/app-webpack-v4/package.json
+++ b/app-webpack-v4/package.json
@@ -2,11 +2,12 @@
   "name": "stackblitz-quasar-app-webpack-v4",
   "version": "0.0.1",
   "description": "A Quasar CLI with Webpack starter project.",
+  "type": "module",
   "private": true,
-  "packageManager": "pnpm@8.15.6",
+  "packageManager": "pnpm@9.6.0",
   "scripts": {
-    "lint": "eslint --ext .js,.vue ./",
-    "format": "prettier --write \"**/*.{js,vue,scss,html,md,json}\" --ignore-path .gitignore",
+    "lint": "eslint -c ./eslint.config.js \"./src*/**/*.{js,cjs,mjs,vue}\"",
+    "format": "prettier --write \"**/*.{js,vue,html,md,json}\" --ignore-path .gitignore",
     "test": "echo \"No test specified\" && exit 0",
     "dev": "quasar dev",
     "build": "quasar build"
@@ -19,13 +20,14 @@
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.25.9",
-    "eslint": "^8.57.1",
-    "eslint-plugin-vue": "^9.31.0",
-    "eslint-webpack-plugin": "^3.1.1",
-    "eslint-config-prettier": "^9.1.0",
+    "@eslint/js": "^9.14.0",
+    "eslint": "^9.14.0",
+    "eslint-plugin-vue": "^9.30.0",
+    "eslint-webpack-plugin": "^4.2.0",
+    "globals": "^15.12.0",
+    "@vue/eslint-config-prettier": "^10.1.0",
     "prettier": "^3.3.3",
-    "@quasar/app-webpack": "^4.0.0-rc.2"
+    "@quasar/app-webpack": "^4.0.1"
   },
   "browserslist": [
     "last 10 Chrome versions",
